--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.2",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "if-env": "^1.0.4",
     "mongoose": "^5.5.7",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "react": "^16.10.2",
+    "react-datepicker": "^2.9.6",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2"
   },
   "engines": {
     "node": "10.16.0"
