Added sign in page and fixed up readme

--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
